# poetry-plugin-i

./: README.md  pyproject.toml
.github/workflows/: ci.yml
poetry_plugin_i/: i_plugin.py
scripts/: check.sh  format.sh  test.sh
tests/: test_plugin.py
